@@ -13,6 +13,7 @@ Bally: Judge Dredd (use L3 Sound ROMs for corrected Deadworld sounds on machines
 Joctronic: Punky Willy
 
 Clones:
+Dirty Harry (LF-2)
 Orbitor 1 (No Timed Game)
 
 
